--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="../assets/css/home.css">
+    <link rel="stylesheet" href="./assets/css/home.css">
 </head>
 <style>
     footer {
@@ -18,12 +18,12 @@
 <body>
     <nav class="navbar fixed-top navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"> <img src="../assets/images/s.jpg" alt="swetha" class="logo"></a>
+            <a class="navbar-brand" href="#"> <img src="./assets/images/s.jpg" alt="swetha" class="logo"></a>
             <a class="navbar-brand" id="home" href="#">Home</a>
-            <a class="navbar-brand" id="about" href="../pages/about.html">About</a>
-            <a class="navbar-brand" id="gall" href="../pages/gallery.html">Gallery</a>
-            <a class="navbar-brand" id="skill" href="../pages/skills.html">Skill</a>
-            <a class="navbar-brand" id="project" href="../pages/project.html">Project</a>
+            <a class="navbar-brand" id="about" href="./pages/about.html">About</a>
+            <a class="navbar-brand" id="gall" href="./pages/gallery.html">Gallery</a>
+            <a class="navbar-brand" id="skill" href="./pages/skills.html">Skill</a>
+            <a class="navbar-brand" id="project" href="./pages/project.html">Project</a>
 
         </div>
     </nav>
