--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
     </nav>
 
     <div class="sec-div">
-        <img src="../assets/images/swetha_color.png" alt="side" class="side">
+        <img src="./assets/images/swetha_color.png" alt="side" class="side">
         <p class="txt">Swetha, a silent girl with high level of intelligence .<br> I am person of good interest in coding and learning <br> new things all the time. Currently, I am Working on <br>my Ruby on Rails final project.</p>
         <a href="#abot"><button type="button" id="btn" class="btn btn-outline-danger">Read More</button></a>
     </div>
