--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -51,7 +51,7 @@
 <body>
     <div class="container-fluid">
         <a class="navbar-brand" href="#"> <img src="../assets/images/s.jpg" alt="swetha" class="logo"></a>
-        <a class="navbar-brand" id="home" href="../pages/home.html">Home</a>
+        <a class="navbar-brand" id="home" href="../home.html">Home</a>
         <a class="navbar-brand" id="about" href="../pages/about.html">About</a>
         <a class="navbar-brand" id="gall" href="#gallery">Gallery</a>
         <a class="navbar-brand" id="skill" href="../pages/skills.html">Skill</a>
