--- a/pages/about.html
+++ b/pages/about.html
@@ -19,7 +19,7 @@
     <nav class="navbar fixed-top navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"> <img src="../assets/images/s.jpg" alt="swetha" class="logo"></a>
-            <a class="navbar-brand" id="home" href="../pages/home.html">Home</a>
+            <a class="navbar-brand" id="home" href="../home.html">Home</a>
             <a class="navbar-brand" id="about" href="../pages/about.html">About</a>
             <a class="navbar-brand" id="gall" href="../pages/gallery.html">Gallery</a>
             <a class="navbar-brand" id="skill" href="../pages/skills.html">Skill</a>
