some alignments changed

--- a/home.html
+++ b/home.html
@@ -27,12 +27,14 @@
     </nav>
 
     <div class="sec-div">
-        <div>
-            <img src="assets/images/swetha_color.png" alt=" side " class="side "></div>
-        <div class="txt ">
-            <p>Swetha, a silent girl with high level of intelligence .<br> I am person of good interest in coding and learning <br> new things all the time. Currently, I am Working on <br>my Ruby on Rails final project.</p>
+        <div class="txt">
+            <p class="content">Swetha, a silent girl with high level of intelligence .<br> I am person of good interest in coding and learning <br> new things all the time. Currently, I am Working on <br>my Ruby on Rails final project.</p>
             <a href="#abot "><button type="button " id="btn " class="btn btn-outline-danger ">Read More</button></a></div>
     </div>
+    <div>
+        <img src="assets/images/swetha_color.png" alt=" side " class="side "></div>
+    </div>
+
     <footer class="page-footer font-small cyan darken-3 ">
         <div class="icons "><svg width="44 " height="44 " viewBox="0 0 44 44 " fill="none " role="img " aria-hidden="true " class="icon ">
             <title>Email</title>
