--- a/pages/project.html
+++ b/pages/project.html
@@ -13,7 +13,7 @@
     * {
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
-    
+
     .project {
         margin-left: 15%;
         height: 800px;
@@ -24,7 +24,15 @@
         font-size: 30px;
         display: inline;
     }
-    
+  .project a {
+    color:black;
+    text-decoration: none;
+    text-align:center;
+    margin-left:50%;
+  }
+  footer {
+    margin-top: 5%;
+  }
     iframe {
         border-radius: 20px;
     }
@@ -53,8 +61,12 @@
         <iframe src="../assets/images/fantasticjourneys.webm" width="800" height="500" style="margin-left:100px;">
         </iframe>
         <iframe src="../assets/images/fantasticjourneys1.webm" width="800" height="500">
-        </iframe>
+        </iframe><br>
+        <a href="https://todo-swetha.herokuapp.com/" >Todo app</a><br>
+        <a href="https://fwsa-batch2.github.io/swetha.saravanan__web_project/">Fantastic journeys</a><br>
+        <a href="https://puzzle-fest-swetha.herokuapp.com/">Puzzle fest</a>
     </div>
+
     <footer class="page-footer font-small cyan darken-3">
         <div class="icons"><svg width="44" height="44" viewBox="0 0 44 44" fill="none" role="img" aria-hidden="true" class="icon">
             <title>Email</title>
