--- a/pages/skills.html
+++ b/pages/skills.html
@@ -13,6 +13,10 @@
 <link rel="stylesheet" href="../assets/css/home.css">
 <style>
     /* img { height: 150px; width: 150px; border-radius: 50%; box-shadow: 0 3px 10px rgb(0 0 0 / 0.2); } */
+    footer
+    {
+        margin-top: -1%;
+    }
 </style>
 
 <body>
