--- a/pages/project.html
+++ b/pages/project.html
@@ -31,10 +31,18 @@
     margin-left:50%;
   }
   footer {
-    margin-top: 5%;
+    margin-top: 10%;
   }
     iframe {
         border-radius: 20px;
+    }
+    .project-link {
+        display:flex;
+    }
+    .project-link .content-1{
+        width: 500px;
+        height: 500px;
+        
     }
 </style>
 
@@ -62,9 +70,14 @@
         </iframe>
         <iframe src="../assets/images/fantasticjourneys1.webm" width="800" height="500">
         </iframe><br>
-        <a href="https://todo-swetha.herokuapp.com/" >Todo app</a><br>
-        <a href="https://fwsa-batch2.github.io/swetha.saravanan__web_project/">Fantastic journeys</a><br>
-        <a href="https://puzzle-fest-swetha.herokuapp.com/">Puzzle fest</a>
+        <div class="project-link">
+         <div class="content-1">
+        <a href="https://todo-swetha.herokuapp.com/" >Todo app</a></div>
+        <div class="content-1">
+        <a href="https://fwsa-batch2.github.io/swetha.saravanan__web_project/">Fantastic journeys</a></div><br>
+        <div class="content-1">
+        <a href="https://puzzle-fest-swetha.herokuapp.com/">Puzzle fest</a></div>
+    </div>
     </div>
 
     <footer class="page-footer font-small cyan darken-3">
