--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
             <a href="#abot "><button type="button " id="btn " class="btn btn-outline-danger ">Read More</button></a></div>
     </div>
     <div>
-        <img src="assets/images/swetha_color.png" alt=" side " class="side "></div>
+        <img src="./assets/images/swetha_color.png" alt=" side " class="side "></div>
     </div>
 
     <footer class="page-footer font-small cyan darken-3 ">
